-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.11.0
-
3
-
9223372036854775807
Currently, osd-ldiskfs call __ldiskfs_ioctl_project() to transfer project quota which is user ioctl
for ext4, it will start transaction and reserve credits, this is not right logic with Lustre.
Lustre have started a transaction handle and credits have been reserved during declare phase,
so calling __ldiskfs_ioctl_project() will cause nested handle starting, which is not a problem for jbd2
because it will attach current thread's handle if transaction have been started, but in this case it will ignore credits reservation.
Also Lustre don't need inode mutex protection for project transfer, Lustre have reserved enough
credits for project transfer, we need fix agent inode transfering.